// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem Component should checkbox and text be checked and empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
  onDoubleClick={[Function]}
>
  <button
    checked={true}
    className="sc-bZQynM bUdJUJ"
    onClick={[Function]}
  />
  <span
    checked={true}
    className="sc-ifAKCX dpBAuT"
  >
    
  </span>
  <button
    className="sc-gzVnrw brvceJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be checked and not empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
  onDoubleClick={[Function]}
>
  <button
    checked={true}
    className="sc-bZQynM bUdJUJ"
    onClick={[Function]}
  />
  <span
    checked={true}
    className="sc-ifAKCX dpBAuT"
  >
    some text
  </span>
  <button
    className="sc-gzVnrw brvceJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be unchecked and empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
  onDoubleClick={[Function]}
>
  <button
    checked={false}
    className="sc-bZQynM ciuIXE"
    onClick={[Function]}
  />
  <span
    checked={false}
    className="sc-ifAKCX kENJqM"
  >
    
  </span>
  <button
    className="sc-gzVnrw brvceJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be unchecked and not empty 1`] = `
<li
  className="sc-EHOje lhpJrP"
  onDoubleClick={[Function]}
>
  <button
    checked={false}
    className="sc-bZQynM ciuIXE"
    onClick={[Function]}
  />
  <span
    checked={false}
    className="sc-ifAKCX kENJqM"
  >
    some text
  </span>
  <button
    className="sc-gzVnrw brvceJ"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;
